<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context="com.example.gbaca.appgestionex.mprincipal">

    <TextView
        android:id="@+id/log"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="12sp"
        android:textColor="@android:color/white"
        android:gravity="center"
        android:layout_alignParentTop="true"
        android:text=""
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:layout_marginLeft="45dp"
        android:layout_marginRight="45dp"
        android:layout_centerInParent="true"
        android:orientation="vertical">

        <ImageView
            android:layout_width="304dp"
            android:layout_height="94dp"
            android:src="@drawable/ic_map_signs"
            android:layout_margin="20dp"
            android:layout_gravity="center"
            android:tint="#fff"
            android:onClick="test"
            />

        <Button
            android:layout_margin="20dp"
            android:id="@+id/btnRecoleccion"
            android:layout_gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:background="@drawable/shape"
            android:text="@string/recoleccion_btn_txt"
            android:onClick="Recoleccion"
            android:textColor="@color/colorPrimary"/>

        <Button
            android:layout_margin="20dp"
            android:id="@+id/btnDisposicion"
            android:layout_gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:background="@drawable/shape"
            android:text="@string/disposicion_btn_txt"
            android:onClick="Disposicion"
            android:textColor="@color/colorPrimary"/>

        <Button
            android:layout_margin="20dp"
            android:id="@+id/btnSalir"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingRight="10dp"
            android:paddingLeft="10dp"
            android:layout_marginTop="40dp"
            android:background="@drawable/shape"
            android:text="@string/salir_btn_txt"
            android:onClick="Salir"
            android:textColor="@color/colorPrimary"/>

    </LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="13sp"
        android:textColor="@android:color/white"
        android:gravity="center"
        android:layout_alignParentBottom="true"
        android:text="@string/licencia_txt"
        />

</RelativeLayout>
