<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context="com.example.gbaca.appgestionex.LoginActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:layout_marginLeft="45dp"
        android:layout_marginRight="45dp"
        android:layout_centerInParent="true"
        android:orientation="vertical">

        <ImageView
            android:layout_width="304dp"
            android:layout_height="94dp"
            android:src="@drawable/ic_user"
            android:layout_margin="20dp"
            android:layout_gravity="center"
            android:tint="#fff"
            />

        <android.support.design.widget.TextInputLayout
            android:layout_margin="20dp"
            android:id="@+id/inputLayoutUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:errorTextAppearance="@style/error_appearance"
            android:textColorHint="#fff"
            >

            <EditText
                android:textColor="@android:color/white"
                android:id="@+id/etUsername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="#fff"
                android:hint="@string/username_hint"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_margin="20dp"
            android:id="@+id/inputLayoutPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:errorTextAppearance="@style/error_appearance"
            android:textColorHint="#fff"
            android:layout_marginTop="5dp">

            <EditText
                android:textColor="@android:color/white"
                android:id="@+id/etPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/pwd_hint"
                android:backgroundTint="#fff"
                android:inputType="textPassword"/>
        </android.support.design.widget.TextInputLayout>

        <Button
            android:layout_margin="20dp"
            android:id="@+id/btnLogin"
            android:layout_gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:background="@drawable/shape"
            android:text="@string/login_btn_txt"
            android:onClick="Login"
            android:textColor="@color/colorPrimary"/>

    </LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="13sp"
        android:textColor="@android:color/white"
        android:gravity="center"
        android:layout_alignParentBottom="true"
        android:text="@string/licencia_txt"
        />
</RelativeLayout>
