<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context="com.example.gbaca.appgestionex.mrecoleccion">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:layout_marginLeft="45dp"
        android:layout_marginRight="45dp"
        android:layout_centerInParent="true"
        android:orientation="vertical">

        <ImageView
            android:layout_width="304dp"
            android:layout_height="94dp"
            android:src="@drawable/ic_street_view"
            android:layout_margin="20dp"
            android:layout_gravity="center"
            android:tint="#fff"
            />

        <Button
            android:layout_margin="20dp"
            android:id="@+id/btnInicioRecoleccion"
            android:layout_gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:background="@drawable/shape"
            android:text="@string/inicio_recoleccion_btn_txt"
            android:onClick="InicioRecoleccion"
            android:textColor="@color/colorPrimary"/>

        <Button
            android:layout_margin="20dp"
            android:id="@+id/btnFinRecoleccion"
            android:layout_gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:background="@drawable/shape"
            android:text="@string/fin_recoleccion_btn_txt"
            android:onClick="FinRecoleccion"
            android:textColor="@color/colorPrimary"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="40dp"
            >
            <ImageView
                android:layout_width="55dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:src="@drawable/ic_arrow_alt_circle_left"
                android:onClick="atras"
                android:tint="#fff"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Regresar"
                android:textSize="16sp"
                android:textColor="@android:color/white"
                android:gravity="center"
                />
        </LinearLayout>

    </LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="13sp"
        android:textColor="@android:color/white"
        android:gravity="center"
        android:layout_alignParentBottom="true"
        android:text="@string/licencia_txt"
        />


</RelativeLayout>
